--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-  font: 400 16px/1.5 "EB Garamond", Garamond, serif;
+  font: 400 16px/1.5 "EB Garamond", serif;
   color: #111;
   background-color: #fdfdfd;
   -webkit-text-size-adjust: 100%;
