maybe this works

--- a/css/main.css
+++ b/css/main.css
@@ -340,8 +340,10 @@ ul.publications {
     display: block;
     font-style: bold; }
   ul.publications .journal-info {}
-  ul.publications .year {}
+  ul.publications .year {
+    float: right;}
   ul.publications .abstract {
+    display: block;
     color: #828282;
     font-size: 0.9rem;}
 
