--- a/css/main.css
+++ b/css/main.css
@@ -335,10 +335,11 @@ ul.publications {
     margin-bottom: 16px; }
   ul.publications .title {
     display: block;
-    font-size: 1.2rem;}
+    font-size: 1.5rem;}
   ul.publications .authors {
     display: block;
-    font-style: bold; }
+    font-style: bold; 
+    margin-right: 10px;}
   ul.publications .journal-info {}
   ul.publications .year {
     float: right;}
